--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
 <!-- this is comment -->
 	<modelVersion>4.0.0</modelVersion>
 	
-	<groupId>com.harish</groupId>
-	<artifactId>harish</artifactId>
+	<groupId>com.chandu</groupId>
+	<artifactId>chandu</artifactId>
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
 	
@@ -25,7 +25,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>harish</finalName>
+		<finalName>chandu</finalName>
 	</build>
 	
 </project>
